--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10029,3 +10029,10 @@ footer .nav-link {
 .trumbowyg-editor ul li{
     list-style: disc;
 }
+
+.dashboard{
+    height: 400px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
